test/arrays/bradc/rankMismatch.good
rankMismatch.chpl:7: error: rank mismatch in array assignment
