test/arrays/bradc/rankMismatch.chpl
var a: [1..9] real = [i in 1..9] i;

writeln("a is: ", a);

var b: [1..3, 1..3] real;

b = a;

writeln("b is: ", b);

